--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chatpack.net</title>
-    <meta name="description" content="tosen and leak" />
+    <title>fbi.support</title>
+    <meta name="description" content="null and leak" />
     <link rel="stylesheet" href="crt.css">
     <style>
         @font-face {
@@ -149,9 +149,9 @@
                    
             document.addEventListener('DOMContentLoaded', function () {
                 const lines = [
-                    { id: 'title', text: 'Tosen and Leak.', delay: 300 },
-                    { id: 'rights', text: 'Chatpack.net (C) All Rights Reserved.', delay: 1200 },
-                    { id: 'entering', text: 'Entering, Chatpack.net', delay: 800 }, 
+                    { id: 'title', text: 'null and Leak.', delay: 300 },
+                    { id: 'rights', text: 'fbi.support (C) All Rights Reserved.', delay: 1200 },
+                    { id: 'entering', text: 'Entering, fbi.support', delay: 800 }, 
                     { id: 'loadingIntel', text: '[ OK ] Loading Clients...', delay: 800 },
                     { id: 'loadingDrivers', text: '[ OK ] Loading Forum...', delay: 1200 }, 
                     { id: 'initMemory', text: '[ OK ] Initializing Clips...', delay: 800 }, 
